Add footer to index and update styles

--- a/index.html
+++ b/index.html
@@ -70,6 +70,30 @@ Ima      <image href="./logo.png" x="32%" y="15%" text-anchor="middle" class="ma
       <div class="elfsight-app-4ab22fdd-9b3e-4132-a284-99f98cc6a692" data-elfsight-app-lazy></div>
     </div>
 <!-- instagram feed  -->
+<footer>
+  <div class="footer">
+  <div class="row">
+  <a href="https://www.facebook.com/profile.php?id=100076401822454"target="_blank"><i class='bx bxl-facebook' style='color:#ff69bc'  ></i></a>
+  <a href="https://www.instagram.com/ayaansidyt/" target="_blank"><i class='bx bxl-instagram' style='color:#ff69bc'  ></i></a>
+           <a href="https://www.linkedin.com/in/ayaan-siddiqui-a924a3220/" target="_blank"><i class='bx bxl-linkedin' style='color:#ff69bc'  ></i></a>
+           <a href="https://github.com/AyaanSidyt" target="_blank"><i class='bx bxl-github' style='color:#ff69bc'  ></i></a>
+  </div>
+  
+  <div class="row">
+  <ul>
+  <li><a >Actors</a></li>
+  <li><a></a>Content Creators</li>
+  <li><a>Artist</a></li>
+  <li><a>About</a></li>
+  
+  </ul>
+  </div>
+  
+  <div class="row">
+  INFERNO Copyright © 2021 Inferno - All rights reserved || made by: Ayaan Siddiqui
+  </div>
+  </div>
+  </footer>
 <script>
 document.addEventListener("DOMContentLoaded", () => {
   const posts = document.querySelectorAll('.es-post');
