--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Ima      <image href="./logo.png" x="22%" y="15%" text-anchor="middle" class="ma
     <defs>
       <mask id="text-mask-mobile" x="0" y="0" width="100%" height="600" maskUnits="userSpaceOnUse">
         <rect width="300" height="600" fill="black" />
-        <image href="./logo.png" x="15%" y="10%" width="150" height="40" class="mask-logo" style="z-index: 100;" />
+        <image href="logo.png" x="15%" y="10%" width="150" height="40" class="mask-logo" style="z-index: 100;" />
         <text x="50%" y="100%" text-anchor="middle" class="mask-nav">ARTIST</text>
         <text x="50%" y="150%" text-anchor="middle" class="mask-nav">ACTOR</text>
         <text x="50%" y="200%" text-anchor="middle" class="mask-nav">CONTENT CREATOR</text>
