--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <title>Document</title>
    <!-- Font Awesome CDN -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <ul>
         <!-- Hamburger Menu Icon -->
-<i class="fas fa-bars"></i>
+        <span class="material-icons">menu</span>
 
 <div class="end-menu">
 <li><a href="">ACCOUNT</a></li>
@@ -71,20 +71,30 @@ Ima      <image href="logo.png" x="22%" y="15%" text-anchor="middle" class="mask
       <div class="elfsight-app-4ab22fdd-9b3e-4132-a284-99f98cc6a692" data-elfsight-app-lazy></div>
     </div>
 <!-- instagram feed  -->
-<footer>
-  <footer class="minimal-footer">
-    <div class="footer-content">
-      <div class="social-icons">
-        <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-        <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-        <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-      </div>
-      <p class="copyright">
-        © 2025 Your Company. All rights reserved.
-      </p>
-    </div>
-  </footer>
+<!-- Boxicons CDN -->
+<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+<footer class="custom-footer">
+  <div class="social-icons">
+    <i class='bx bxl-instagram'></i>
+    <i class='bx bxl-twitter'></i>
+    <i class='bx bxl-facebook'></i>
+    <i class='bx bxl-youtube'></i>
+  </div>
+  <div class="footer-links">
+    <a href="#">ARTISTS</a>
+    <a href="#">ACTORS</a>
+    <a href="#">CONTENT CREATORS</a>
+    <a href="#">APPLY TO JOIN</a>
+    <a href="#">CONTACT US</a>
+    <a href="#">T&Cs</a>
+  </div>
+  <hr class="footer-line">
+  <div class="footer-bottom">
+    © 2025 - ALCHEMIST - Talent Management Agency
+  </div>
+</footer>
+
   
 <script>
 document.addEventListener("DOMContentLoaded", () => {
