Fix case sensitivitnehkjhjjk

--- a/index.html
+++ b/index.html
@@ -75,19 +75,22 @@ Ima      <image href="logo.png" x="22%" y="15%" text-anchor="middle" class="mask
 <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 <footer class="custom-footer">
-  <div class="social-icons">
-    <i class='bx bxl-instagram'></i>
-    <i class='bx bxl-twitter'></i>
-    <i class='bx bxl-facebook'></i>
-    <i class='bx bxl-youtube'></i>
-  </div>
-  <div class="footer-links">
-    <a href="#">ARTISTS</a>
-    <a href="#">ACTORS</a>
-    <a href="#">CONTENT CREATORS</a>
-    <a href="#">APPLY TO JOIN</a>
-    <a href="#">CONTACT US</a>
-    <a href="#">T&Cs</a>
+  <div class="bigfoot">
+
+    <div class="social-icons">
+      <i class='bx bxl-instagram'></i>
+      <i class='bx bxl-twitter'></i>
+      <i class='bx bxl-facebook'></i>
+      <i class='bx bxl-youtube'></i>
+    </div>
+    <div class="footer-links">
+      <a href="#">ARTISTS</a>
+      <a href="#">ACTORS</a>
+      <a href="#">CONTENT CREATORS</a>
+      <a href="#">APPLY TO JOIN</a>
+      <a href="#">CONTACT US</a>
+      <a href="#">T&Cs</a>
+    </div>
   </div>
   <hr class="footer-line">
   <div class="footer-bottom">
