--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@ Ima      <image href="logo.png" x="22%" y="15%" text-anchor="middle" class="mask
 <!-- iOS fallback only -->
 <div class="ios-fallback" style="display: none;">
   <div class="ios-header">
-    <img src="logo.png" alt="ALCHISY Logo" class="ios-logo" />
+    <img src="ioslogo.png" alt="ALCHISY Logo" class="ios-logo" />
     <nav class="ios-nav">
       <a href="#">ARTISTS</a>
       <a href="#">ACTORS</a>
       <a href="#">CONTENT CREATORS</a>
       <a href="#">APPLY TO JOIN</a>
     </nav>
-    <div class="ios-chevron">⌄</div>
+    <div class="ios-chevron"><img src="chevron.png" alt="" width="40px"></div>
   </div>
 </div>
 <!-- responsive mask cont -->
