Fix case seniosdamarginsjk

--- a/index.html
+++ b/index.html
@@ -58,7 +58,11 @@ Ima      <image href="logo.png" x="22%" y="15%" text-anchor="middle" class="mask
   </svg>
   <div class="ios-fallback" style="display: none;">
   <div class="ios-header">
-    <img src="ioslogo.png" alt="ALCHISY Logo" class="ios-logo" />
+    <div class="ios-logo-wrapper">
+      <img src="ioslogo.png" alt="Logo" class="ios-logo" />
+      <div class="ios-logo-shine"></div>
+    </div>
+    
     <nav class="ios-nav">
       <a href="#">ARTISTS</a>
       <a href="#">ACTORS</a>
