--- a/vny.html
+++ b/vny.html
@@ -3,107 +3,161 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Document</title>
-  <!-- Font Awesome CDN -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+  <title>Masked Logo and Links with Chevron</title>
   <style>
-    body, html {
+    * {
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
       background: white;
-      height: 100%;
-      overflow: hidden;
-    }
-
-    ul {
-      position: absolute;
-      top: 20px;
-      left: 20px;
-      z-index: 10;
-      list-style: none;
+      min-height: 100vh;
+      overflow-x: hidden;
       display: flex;
+      justify-content: center;
       align-items: center;
-      gap: 20px;
+      flex-direction: column;
+      gap: 40px;
+      padding: 20px;
     }
 
-    ul i {
-      font-size: 24px;
-      cursor: pointer;
-    }
-
-    .end-menu {
-      display: flex;
-      gap: 20px;
-      align-items: center;
-    }
-
-    .end-menu li a {
-      color: black;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    .mask-container {
-      width: 100vw;
-      height: 100vh;
+    /* Logo Mask */
+    .mask-item {
+      width: 90vw;
+      max-width: 1000px;
+      height: 300px;
       position: relative;
-      background: white;
-      mask: url(#text-mask);
-      -webkit-mask: url(#text-mask);
-      mask-type: luminance;
-      -webkit-mask-type: luminance;
+      -webkit-mask-image: url('logo.png');
+      -webkit-mask-repeat: no-repeat;
+      -webkit-mask-size: contain;
+      -webkit-mask-position: center;
+      mask-image: url('logo.png');
+      mask-repeat: no-repeat;
+      mask-size: contain;
+      mask-position: center;
     }
 
-    .background-video {
-      position: absolute;
-      top: 0;
-      left: 0;
-      object-fit: cover;
+    .mask-video {
       width: 100%;
       height: 100%;
+      object-fit: cover;
     }
 
-    .mask-svg {
-      position: absolute;
-      width: 0;
-      height: 0;
+    /* Links Mask */
+    .link-container {
+      display: flex;
+      gap: 30px;
+      flex-wrap: wrap;
+      justify-content: center;
+      width: 100%;
+    }
+
+    .link-mask {
+      width: 180px;
+      height: 180px;
+      position: relative;
+      -webkit-mask-size: contain;
+      -webkit-mask-repeat: no-repeat;
+      -webkit-mask-position: center;
+      mask-size: contain;
+      mask-repeat: no-repeat;
+      mask-position: center;
+      flex-shrink: 0;
+    }
+
+    /* Individual Masks for links */
+    .link1 { mask-image: url('artist.png'); -webkit-mask-image: url('artist.png'); }
+    .link2 { mask-image: url('actors.png'); -webkit-mask-image: url('actors.png'); }
+    .link3 { mask-image: url('cc.png'); -webkit-mask-image: url('cc.png'); }
+    .link4 { mask-image: url('atj.png'); -webkit-mask-image: url('atj.png'); }
+
+    .link-mask video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    /* Chevron Mask with Animation */
+    .chevron-mask {
+      width: 100px;
+      height: 100px;
+      position: relative;
+      -webkit-mask-image: url('chevron.png');
+      -webkit-mask-repeat: no-repeat;
+      -webkit-mask-size: contain;
+      -webkit-mask-position: center;
+      mask-image: url('chevron.png');
+      mask-repeat: no-repeat;
+      mask-size: contain;
+      mask-position: center;
+      animation: bounce 1.5s infinite ease-in-out;
+    }
+
+    .chevron-mask video {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    /* Bounce Animation */
+    @keyframes bounce {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(15px); }
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .mask-item {
+        height: 200px;
+      }
+
+      .link-container {
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+      }
+
+      .link-mask {
+        width: 150px;
+        height: 150px;
+      }
+
+      .chevron-mask {
+        width: 70px;
+        height: 70px;
+      }
     }
   </style>
 </head>
 <body>
-  <ul>
-    <!-- Hamburger Menu Icon -->
-    <i class="fas fa-bars"></i>
-    <div class="end-menu">
-      <li><a href="">ACCOUNT</a></li>
-      <i class="fas fa-search"></i>
-    </div>
-  </ul>
 
-  <div class="mask-container">
-    <!-- Background Video -->
-    <video class="background-video" autoplay muted loop playsinline>
-      <source src="video.mp4" type="video/mp4" />
-    </video>
-
-    <!-- SVG Mask -->
-    <svg class="mask-svg" viewBox="0 0 1200 600">
-      <defs>
-        <mask id="text-mask" x="0" y="0" width="100%" height="100%" maskUnits="userSpaceOnUse">
-          <!-- Hide all -->
-          <rect width="100%" height="100%" fill="black" />
-
-          <!-- Show logo image -->
-          <image href="./alchemist.png" x="500" y="150" width="200" height="100" />
-
-          <!-- Show nav links -->
-          <text x="300" y="350" fill="white" font-size="30" font-family="Arial" text-anchor="middle">MEN</text>
-          <text x="450" y="350" fill="white" font-size="30" font-family="Arial" text-anchor="middle">WOMEN</text>
-          <text x="600" y="350" fill="white" font-size="30" font-family="Arial" text-anchor="middle">VTALENT</text>
-          <text x="750" y="350" fill="white" font-size="30" font-family="Arial" text-anchor="middle">⌄</text>
-        </mask>
-      </defs>
-    </svg>
+  <!-- Main masked logo -->
+  <div class="mask-item">
+    <video class="mask-video" src="video.mp4" autoplay muted loop playsinline></video>
   </div>
+
+  <!-- Links (masked with individual PNGs) -->
+  <div class="link-container">
+    <div class="link-mask link1">
+      <video src="video.mp4" autoplay muted loop playsinline></video>
+    </div>
+    <div class="link-mask link2">
+      <video src="video.mp4" autoplay muted loop playsinline></video>
+    </div>
+    <div class="link-mask link3">
+      <video src="video.mp4" autoplay muted loop playsinline></video>
+    </div>
+    <div class="link-mask link4">
+      <video src="video.mp4" autoplay muted loop playsinline></video>
+    </div>
+  </div>
+
+  <!-- Chevron mask below links -->
+  <div class="chevron-mask">
+    <video src="video.mp4" autoplay muted loop playsinline></video>
+  </div>
+
 </body>
 </html>
