--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 <footer class="custom-footer">
+  <hr class="footer-line">
   <div class="bigfoot">
 
     <div class="social-icons">
