--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 <!-- Boxicons CDN -->
 <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
+<hr class="footer-line footer2lin">
 <footer class="custom-footer">
-  <hr class="footer-line">
   <div class="bigfoot">
 
     <div class="social-icons">
