--- a/index.html
+++ b/index.html
@@ -66,21 +66,23 @@
 
 <footer class="custom-footer">
   <div class="bigfoot">
+<div class="topfoot">
 
-    <div class="social-icons">
-      <i class='bx bxl-instagram'></i>
-      <i class='bx bxl-twitter'></i>
-      <i class='bx bxl-facebook'></i>
-      <i class='bx bxl-youtube'></i>
-    </div>
-    <div class="footer-links">
-      <a href="#">ARTISTS</a>
-      <a href="#">ACTORS</a>
-      <a href="#">CONTENT CREATORS</a>
-      <a href="#">APPLY TO JOIN</a>
-      <a href="#">CONTACT US</a>
-      <a href="#">T&Cs</a>
-    </div>
+  <div class="social-icons">
+    <i class='bx bxl-instagram'></i>
+    <i class='bx bxl-twitter'></i>
+    <i class='bx bxl-facebook'></i>
+    <i class='bx bxl-youtube'></i>
+  </div>
+  <div class="footer-links">
+    <a href="#">ARTISTS</a>
+    <a href="#">ACTORS</a>
+    <a href="#">CONTENT CREATORS</a>
+    <a href="#">APPLY TO JOIN</a>
+    <a href="#">CONTACT US</a>
+    <a href="#">T&Cs</a>
+  </div>
+</div>
   </div>
   <hr class="footer-line">
   <div class="footer-bottom">
